Fix center alignment with logo and button in header

--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -4,3 +4,9 @@
   justify-content: space-between;
   padding: 10px 20px;
 }
+
+.Header__btn {
+  display: block;
+  height: 40px;
+  width: 139px;
+}
